--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "14.14.0"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2",
     "request": "^2.88.2"
   }
